--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
- <html>
-  <body>
-  <h1>Hello World! Welcome to my index!</h1>
-  <p>I'm hosted with this awesome website called GitHub Pages!</p>
-  </body>
+<html> 
+  <head> 
+  <title>Wendy's Computer Science Website</title>
+  </head>
+    <body>
+    <h1>Welcome to Wendy's Computer Science Website</h1>
+    <p>I created this website to keep track of all my computer science accomplishments! Don't be shy, take a look!</p>
+    </body>
 </html>
