--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <title>Wendy's Computer Science Website</title>
   </head>
     <body>
+     <center>
     <h1>Welcome to Wendy's Computer Science Website</h1>
+      </center> 
     <p>I created this website to keep track of all my computer science accomplishments! Don't be shy, take a look!</p>
     </body>
 </html>
