--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
     <h1>Welcome to Wendy's Computer Science Website</h1> 
     <p>I created this website to keep track of all my computer science accomplishments! Don't be shy, take a look!</p>
+      <ul>
+      <li><a href="https://docs.google.com/document/d/18IQ5GH9LJzoRnBbCeUi30ADL7v0s9L06svSMQFoUafE/edit#heading=h.7jd19u299a6m">My Database</a></li>
+      </ul>
     </body>
   </center> 
 </html>
