--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html> 
-  <head> 
-  <title>Wendy's Computer Science Website</title>
-  </head>
-    <center>
-    <body>
-    <h1>Welcome to Wendy's Computer Science Website</h1> 
-    <p>I created this website to keep track of all my computer science accomplishments! Don't be shy, take a look!</p>
-      <ul>
-      <li><a href="https://docs.google.com/document/d/18IQ5GH9LJzoRnBbCeUi30ADL7v0s9L06svSMQFoUafE/edit#heading=h.7jd19u299a6m">My Database</a></li>
-      </ul>
-    </body>
-  </center> 
-</html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Wendy's Computer Science Portfilo</title> 
+    <link type="text/css" rel="stylesheet" href="styles.css"> 
+  </head> 
+  <body>
+    
