--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Wendy's Computer Science Portfilo</title> 
     <link type="text/css" rel="stylesheet" href="styles.css"> 
+    <script language="javascript" type="text/javascript" scr="engine.js"></script> 
   </head> 
   <body>
     
