--- a/index.html
+++ b/index.html
@@ -7,4 +7,17 @@
     <script language="javascript" type="text/javascript" scr="engine.js"></script> 
   </head> 
   <body>
+    <section id="home">
+      <div class="overlay">
+        <nav role="navigation"> 
+          <ul class="vertical-list">
+            <li><a href="#home">Home</a></li> 
+            <li><a href="#about">About Me</a></li> 
+            <li><a href="#portfilo">Portfilo</a></li> 
+            <li><a href="#contact">Contact Me</a></li> 
+          </ul>
+        </nav>
+        
+        <div class="container">
+          <h1><span class="logo">Computer Science</span> 
     
