--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
           <h1><span class="logo">Computer Science</span><small>Portfilo</small></h1> 
           <ul class="social-linkz vertical-list">
-            <li><a href="twitterlinkhere" class="noir Twitter">Twitter</a></li>
+            <li><a href="https://docs.google.com/document/d/18IQ5GH9LJzoRnBbCeUi30ADL7v0s9L06svSMQFoUafE/edit" class="noir Twitter">My Database</a></li>
             <li><a href="facebooklinkhere" class="noir facebook">Facebook</a></li> 
             <li><a href="instagramlinkhere" class="noir instagram">Instagram</a></li> 
           </ul>
