--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					</div>
 
 					<div class="col-sm-4">
-						<img src="wendy.jpg" alt="Wendy Rodriguez" class="img-responsive img-circle">
+						<img src="wendy.jpg"height="300" width="150" alt="Wendy Rodriguez" class="img-responsive img-circle">
 					</div>
 				</div>
 				
