--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 							 Here I  will basically be talking about myself, but once i finish it i will do it.
 						<span class="signature">Love,Wendy Rodriguez</span>
 					</div>
-
-					<div class="col-sm-4">
+					<div class="col-md-4">
 						<img src="wendy.jpg"height="350" width="220" alt="Wendy Rodriguez" class="img-responsive img-circle">
 					</div>
 				</div>
