--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									</div>
 									<!-- END OF DESCRIPTION -->
 									
-									<img src="" alt="Exposed Party">
+									<img src="IMG_7591.jpg" alt="Exposed Party">
 									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Andriod Studio-Exposed Party</h4>
 								</div>
 								<!-- END OF OVERLAY -->
