--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									</div>
 									<!-- END OF DESCRIPTION -->
 									
-									<img src="" alt="My Database">
+									<img src="Screen Shot 2017-02-05 at 11.15.42 AM.png" alt="My Database">
 									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>My Database</h4>
 								</div>
 								<!-- END OF OVERLAY -->
