--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 									<!-- DESCRIPTION -->
 									<div class="description">
 										<p>
-								Here I will explain how python and the gopigo work.
+								Challenge 0: 
+											Our new project is called: Programmable C
 										</p>
 										
 										<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
