--- a/index.html
+++ b/index.html
@@ -200,13 +200,19 @@
 								<div class="overlay">
 									<!-- DESCRIPTION -->
 									<div class="description">
-										<p> 
-                      Future Assignments go here!
+										<p>
+								Challenge 1: Once, we knew how to connect the circuits correctly to get the LED lights on, we began coding using the language of python. Brittney and I, primarily began doing research on how we could change the pattern of the lights, in which we did. Once, we found out how to do it, we began coding in which we simply delayed the timing for  on and off button by five seconds and had it repeat twice before it turned off.
+                      
 										</p>
 										
 										<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
 										<ul class="tools vertical-list">
-											<li>future tools</li>
+											<li>Python</li>
+											<li>Raspberry Pi</li> 
+											<li>LED Light</li> 
+											<li>Breadboard</li>
+											<li>Filazilla<li> 
+											<li>Notepad++</li> 
 										</ul>
 									</div>
 									<!-- END OF DESCRIPTION -->
