--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 									</div>
 									<!-- END OF DESCRIPTION -->
 									
-									<img src="" alt="Future Assignment Pictures">
+									<img src="ezgif.com-video-to-gif.gif" alt="Future Assignment Pictures">
 									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Future Assignment will go here</h4>
 								</div>
 								<!-- END OF OVERLAY -->
