--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 									</div>
 									<!-- END OF DESCRIPTION -->
 									
-									<img src="ezgif.com-video-to-gif.gif" alt="Future Assignment Pictures">
-									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Future Assignment will go here</h4>
+									<img src="ezgif.com-video-to-gif.gif" alt="gif">
+									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Challenge 1: Blink Challenge! </h4>
 								</div>
 								<!-- END OF OVERLAY -->
 							</section>
