--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										<p>In computer science, we (as a class) have been trying to involve ourself into reading more articles based on computer science and things revoling around that. Trying to expand our knowlegde for computer science in a much deeper level and as we continue to read different article, we begin filling out our reading log (also known as my database.) In the reading log we basically would chose an article that is interesting to use and in the reading log we make a brief summary, write down a memorable quote, and write down our own opinions. Enter my database <a href="https://docs.google.com/document/d/18IQ5GH9LJzoRnBbCeUi30ADL7v0s9L06svSMQFoUafE/edit?usp=sharing">here</a></p>			
 									<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
 										<ul class="tools vertical-list">
-											<li>google docs</li>
+											<li><a href="https://docs.google.com/document/d/18IQ5GH9LJzoRnBbCeUi30ADL7v0s9L06svSMQFoUafE/edit?usp=sharing">My Database</a></li>
 											<li>different articles</li>
 											<li>A computer</li>
 											<li>Your Mind</li>
