--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 										
 										<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
 										<ul class="tools vertical-list">
-											<li>future tools</li>
+											<li>future tool</li>
 										</ul>
 									</div>
 									<!-- END OF DESCRIPTION -->
