--- a/index.html
+++ b/index.html
@@ -233,18 +233,23 @@
 									<!-- DESCRIPTION -->
 									<div class="description">
 										<p>
-											Future Assignment Here!  
+									Challenge 2: We were given the task of programming a circuit that receives input from the user and is able to produce a visible output in the circuit. What Brittney and I did was to code a script that detects user input and flashes morse code on the lights. The code is able to detect when the user types in capital letters, puntuations, and any special character that the user decides to write in. Brittney and I made our light show say "Hewwoooooo" (an Inside Joke). So, the way this would work is that the user would head towards the terminal, once they are at the terminal; they would be able to write down any thing and once they word down their desired word, they would press enter and the lights will flash out the morse code. If you wanna take a look at the code, feel free to press the Python button; it will show you morse code file that contains more than 900 lines.	 
 										</p>
 										
 										<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
 										<ul class="tools vertical-list">
-											<li>future tool</li>
+											<li><a href="https://docs.google.com/a/davincischools.org/document/d/1ItxeNcTh2Q0bn4s_93Qu0CpdFnhUYQDjEgQQlXYCj0Y/edit?usp=sharing">Python</a></li>
+											<li>Raspberry Pi</li>
+											<li>LED Lights</li>
+											<li>Breadboard</li>
+											<li>Fillzilla</li>
+											<li>Notepad++</li>
 										</ul>
 									</div>
 									<!-- END OF DESCRIPTION -->
 									
-									<img src="" alt="future assignment picture">
-									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Future Assignment</h4>
+									<img src="ezgif-3-59e2edb890.gif" alt="gif">
+									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Challenge 2: User Input Challenge!</h4>
 								</div>
 								<!-- END OF OVERLAY -->
 							</section>
