--- a/index.html
+++ b/index.html
@@ -266,18 +266,23 @@
 									<!-- DESCRIPTION -->
 									<div class="description">
 										<p>
-											Future Assignment
+											Python Loop Quiz: Throughout this entire project, we learned a form of code called "Python Loops". If you want to take a look at the code, feel free to press the "Python" button, on the tools used section. The way that this code works is that Brittney and I made the LED Lights blink ten times, by making the "i=o" a variable. Then we put the "while" statement that said while "i" is less than 5, then it will wait 0.5 seconds, once it waited the power of the led lights will go on again. Everytime the light goes, on then the code will add 0.5 seconds to the variable "i" (i=i+0.5), initally making the LED Lights blink about 10 times. 
 										</p>
 										
 										<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
 										<ul class="tools vertical-list">
-											<li>future tools</li>
+											<li>Python</li>
+											<li>Raspberry Pi</li>
+											<li>LED Lights</li> 
+											<li>Breadboard</li> 
+											<li>Fillzilla</li> 
+											<li>Notepadd++</li>
 										</ul>
 									</div>
 									<!-- END OF DESCRIPTION -->
 									
-									<img src="" alt="future assignment picture">
-									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Future Assignment</h4>
+									<img src="cCNGCaqkimFkk.gif" alt="gif">
+									<h4 class="heading"><span class="glyphicon glyphicon-collapse-up"></span>Python Loop Quiz Retake</h4>
 								</div>
 								<!-- END OF OVERLAY -->
 							</section>
