--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 										
 										<h6>Tools<span class="glyphicon glyphicon-cog"></span></h6>
 										<ul class="tools vertical-list">
-											<li>Python</li>
+											<li><a href="https://docs.google.com/a/davincischools.org/document/d/1sTFjrMfDFRysltRpPC-Alsj9dWCNMVMuh6hEU1gDfC4/edit?usp=sharing">Python</a></li>
 											<li>Raspberry Pi</li>
 											<li>LED Lights</li> 
 											<li>Breadboard</li> 
